# WordCloud

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
example/: Program.cs  example.csproj  tmp.txt
native/: CMakeLists.txt  wordcloud.c
native/include/: wordcloud.h
native/src/: wordcloud.c
src/: WordCloud.cs  WordCloud.csproj
